--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,3 +4,15 @@ styles: true
 ---
 
 @import "alembic";
+
+// #9c324b
+// #329c83
+
+// Text colours
+$headingColour: #9c324b;
+$bodyColour: #384743;
+$linkColour: #329c83;
+$hoverColour: #008000;
+$focusColour: #fa407a;
+$captionColour: #a8adac;
+$white: #ffffff;
